; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serial/extr_samsung.c_s3c24xx_serial_rx_chars.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serial/extr_samsung.c_s3c24xx_serial_rx_chars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c24xx_uart_port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @s3c24xx_serial_rx_chars to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c24xx_serial_rx_chars(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.s3c24xx_uart_port*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.s3c24xx_uart_port*
  store %struct.s3c24xx_uart_port* %8, %struct.s3c24xx_uart_port** %6, align 8
  %9 = load %struct.s3c24xx_uart_port*, %struct.s3c24xx_uart_port** %6, align 8
  %10 = getelementptr inbounds %struct.s3c24xx_uart_port, %struct.s3c24xx_uart_port* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = icmp ne %struct.TYPE_2__* %11, null
  br i1 %12, label %13, label %23

13:                                               ; preds = %2
  %14 = load %struct.s3c24xx_uart_port*, %struct.s3c24xx_uart_port** %6, align 8
  %15 = getelementptr inbounds %struct.s3c24xx_uart_port, %struct.s3c24xx_uart_port* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @s3c24xx_serial_rx_chars_dma(i8* %21)
  store i32 %22, i32* %3, align 4
  br label %26

23:                                               ; preds = %13, %2
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @s3c24xx_serial_rx_chars_pio(i8* %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %23, %20
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @s3c24xx_serial_rx_chars_dma(i8*) #1

declare dso_local i32 @s3c24xx_serial_rx_chars_pio(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
